# vizoxide

./: Cargo.toml  readme.md
examples/: complex_graph_with_build_pattern.rs  creating_context_with_plugins.rs  custom_layout_settings.rs  edge_builder_with_multiple_attributes.rs  iterating_over_nodes_and_edges.rs  modifying_attributes_and_removing_them.rs  predefined_layout_settings.rs  render_graph_to_string_and_bytes.rs  render_graph_to_writer.rs  simple_graph.rs
src/: attr.rs  graph.rs  layout.rs  lib.rs  render.rs
